force-app/main/default/objects/Project_Task__c/fields/Actual_time__c.field-meta.xml
<CustomField>
    <fullName>Actual_time__c</fullName>
    <description>Created By: YB
Business Unit: BTC
Purpose: Total time spent on the task.</description>
    <label>Actual time</label>
    <summarizedField>Time__c.Hours__c</summarizedField>
    <summaryForeignKey>Time__c.Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>