force-app/main/default/objects/Project_Task__c/fields/Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours__c</fullName>
    <description>Created By: MH
Business Unit:BTC
Purpose: Total billable hours for a task.</description>
    <label>Billable Hours</label>
    <summarizedField>Time__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Time__c.Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Time__c.Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>