force-app/main/default/objects/Project_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Provides a description of the project task details, what needs to be accomplished, and possibly how to do it.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What needs to be accomplished and how?</inlineHelpText>
    <label>Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>