force-app/main/default/objects/Project_Task__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>