force-app/main/default/objects/Project_Task__c/recordTypes/BLDG_Design_Project_Task.recordType-meta.xml
<RecordType>
    <fullName>BLDG_Design_Project_Task</fullName>
    <active>true</active>
    <label>BLDG - Design Project Task</label>
</RecordType>