force-app/main/default/objects/Project_Task__c/listViews/BLDG_Project_Tasks_Open.listView-meta.xml
<ListView>
    <fullName>BLDG_Project_Tasks_Open</fullName>
    <columns>NAME</columns>
    <columns>Milestone__c</columns>
    <columns>Project__c</columns>
    <columns>Assignee__c</columns>
    <columns>Assigned_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project_Task__c.BLDG_Design_Project_Task</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In-Progress,In Review</value>
    </filters>
    <label>BLDG - Project Tasks - Open</label>
    <sharedTo>
        <group>BLDG_Team</group>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>