force-app/main/default/objects/Project_Task__c/listViews/Hashtag_Project_Tasks.listView-meta.xml
<ListView>
    <fullName>Hashtag_Project_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Milestone__c</columns>
    <columns>Project__c</columns>
    <columns>Assignee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>0123i000000QHMU</value>
    </filters>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>BW - Hashtag - Phase 1</value>
    </filters>
    <label>Hashtag Project Tasks</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
        <group>Tech_Support_Team</group>
    </sharedTo>
</ListView>